Início do Cabeça Livre, configurações iniciais e tradução da interface

--- a/_config.yml
+++ b/_config.yml
@@ -22,15 +22,15 @@
 author:
     # Site's author name
     # Default: not set (author name is not displayed)
-    name: Your awesome name
+    #name: Your awesome name
 
     # Site's author email
     # Default: not set (author email is not displayed)
-    email: your-email@yourdomain.com
+    #email: your-email@yourdomain.com
 
     # Site's author website, profile
     # Default: not set (author site is not displayed)
-    site: http://yourdomain.com
+    #site: http://yourdomain.com
 
 ############
 # Building #
@@ -104,7 +104,7 @@ google:
     # Google Analytics Property ID
     # Allows tracking site pageviews and other events using Google Analytics.
     # Default: not set (Google Analytics is not used to track site pageviews)
-    # analytics_property_id: UA-12345678-9
+    analytics_property_id: 'UA-65333685-6'
 
     # If you do not know your Property ID, take a look at
     # https://support.google.com/analytics/answer/1032385
@@ -116,7 +116,7 @@ google:
     # Allows visitors to search the website without leaving it, using a custom
     # search engine powered by Google.
     # Default: not set (instead of a CSE, Google is used to handle searching)
-    # cse_id: 123456789012345678901:abcdefghijk
+    cse_id: 006707575509905065349:jxstxpo3ske
 
     # If you do not know your CSE ID, take a look at
     # https://support.google.com/customsearch/answer/2649143
@@ -130,7 +130,7 @@ google:
         # Google AdSense publisher ID
         # Your publisher ID is the unique identifier for your AdSense account.
         # Default: not set (Google AdSense is not used to show ads)
-        # publisher_id: pub-1234567890123456
+        publisher_id: 'pub-5193467168351289'
 
         # If you do not know your publisher ID, take a look at
         # https://support.google.com/adsense/answer/105516
@@ -139,17 +139,17 @@ google:
         # the title, if in a page or post, or after the first post, if in a post
         # listing
         # Default: not set (no ad is displayed at the top)
-        # content_ad_unit_1: 1234567890
+        content_ad_unit_1: 7049989586
 
         # Ad unit ID for the ad displayed inside the page content, randomly
         # placed between paragraphs, if in a page or post, or between posts, if
         # in a post listing
         # Default: not set (no ad is displayed in the page content)
-        # content_ad_unit_2: 0987654321
+        content_ad_unit_2: 3973782995
 
         # Ad unit ID for the ad displayed in the sidebar
         # Default: not set (no ad is displayed in the sidebar)
-        # sidebar_ad_unit: 1231231231
+        sidebar_ad_unit: 9924113677
 
         # Note: use only responsive ad units
 
@@ -219,13 +219,13 @@ jekyll-archives:
 # Site URL
 # The base protocol and hostname for the website
 # Default: not set (this variable is only necessary for external systems)
-# url: "https://yourdomain.com"
+url: "https://cabecalivre.com"
 
 # Enforce the use of HTTPS on production domain
 # The hostname (does not include protocol, just the domain) for which the use of
 # HTTPS should be enforced
 # Default: not set (the use of HTTPS is never enforced)
-# enforce_https: "yourdomain.com"
+enforce_https: "cabecalivre.com"
 
 ###########
 # Serving #
@@ -244,13 +244,12 @@ jekyll-archives:
 #################
 
 # Site title
-title: Your awesome title
+title: 'Cabeça Livre'
 
 # Site description
 description: > # this means to ignore newlines until the text ends
-    Write an awesome description for your new site here. You can edit this
-    line in _config.yml. It will appear in your document head meta (for
-    Google search results) and in your feed.xml site description.
+    Este site visa trazer notícias que não aparecem comumente na mídia local
+    brasileira. É destinado a quem busca uma fonte alternativa de informação.
 
 # Default site image
 # Image used as a default thumbnail for pages and posts which do not have an
@@ -262,7 +261,7 @@ image: "/assets/favicons/android-chrome-192x192.png"
 # A language tag following the language tag syntax (IETF's BCP 47). This is
 # meant to assist search engines and browsers.
 # Default: not set (do not associate any language with this site's content)
-lang: en
+lang: pt
 
 # For more info on language tags, please refer to
 # http://www.w3.org/International/articles/language-tags/
@@ -287,7 +286,7 @@ lang: en
 # website with social networks. An AddThis profile contains configuration
 # options and analytics data for a website.
 # Default: not set (AddThis is not used to handle social networks integration)
-# addthis_profile_id: "ra-example123456789"
+addthis_profile_id: "ra-5ec0947574225d87"
 
 # If you do not know your AddThis profile ID, you can find it at
 # https://www.addthis.com/settings/publisher
@@ -302,7 +301,7 @@ lang: en
 # only your site's comments, as well as the settings specified in your Disqus
 # admin.
 # Default: not set (do not use Disqus to handle comments)
-# disqus_shortname: "my_disqus_shortname"
+disqus_shortname: "cabecalivrecom"
 
 # If you do not know your Disqus shortname, take a look at
 # https://help.disqus.com/customer/portal/articles/466208
@@ -334,7 +333,7 @@ facebook:
     # username, if your profile is at https://facebook.com/username or
     # Page-Name/123456, if your page is at https://facebook.com/Page-Name/123456
     # Default: not set (Facebook URL is not displayed)
-    # username: "username"
+    username: "CabecaLivreCom"
 
 # Foursquare username
 # Example: username, if your Foursquare URL is https://foursquare.com/username
@@ -344,7 +343,7 @@ facebook:
 # GitHub username
 # Example: jekyll, if your GitHub URL is https://github.com/jekyll
 # Default: not set (GitHub URL is not displayed)
-github_username: "jekyll"
+# github_username: "jekyll"
 
 # Google Plus user ID
 # Example: 123456789098765432123, if your Google Plus URL is
@@ -355,7 +354,7 @@ github_username: "jekyll"
 # Instagram username
 # Example: username, if your Instagram URL is https://instagram.com/username
 # Default: not set (Instagram URL is not displayed)
-# instagram_username: "username"
+instagram_username: "CabecaLivreCom"
 
 # LinkedIn username
 # Example: username, if your LinkedIn public profile URL is
@@ -366,7 +365,7 @@ github_username: "jekyll"
 # Twitter username
 # Example: jekyllrb, if your Twitter URL is https://twitter.com/jekyllrb
 # Default: not set (Twitter URL is not displayed)
-twitter_username: "jekyllrb"
+twitter_username: "CabecaLivreCom"
 
 youtube:
     # What kind of YouTube profile you have (it can be "user" or "channel")
@@ -380,7 +379,7 @@ youtube:
     # channelname, if your YouTube channel is at
     # https://www.youtube.com/channel/channelname
     # Default: not set (YouTube URL is not displayed)
-    # name: "username"
+    # name: "UCvy3zgcREgyeo8LY2vdPxmw"
 
 #####################
 # YAML Front Matter #
