--- a/_config.yml
+++ b/_config.yml
@@ -369,6 +369,8 @@ instagram_username: "CabecaLivreCom"
 # Default: not set (Twitter URL is not displayed)
 twitter_username: "CabecaLivreCom"
 
+gab_username: "CabecaLivreCom"
+
 parler_username: "CabecaLivreCom"
 
 youtube:
